# 5g-migration-agent-control-tower

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  ui_helpers.py
data/synthetic/: subscribers.json
docs/: ARCHITECTURE.md
src/migration_control_tower/: __init__.py  config.py
src/migration_control_tower/adapters/: __init__.py  base.py  care_case_hub.py  customer360.py  device_registry.py  provisioning_hub.py
src/migration_control_tower/agent/: __init__.py  eligibility_reviewer.py  heuristics.py  review_logic.py
src/migration_control_tower/context/: __init__.py  assembler.py
src/migration_control_tower/data/: __init__.py  loader.py  models.py
src/migration_control_tower/decision/: __init__.py  combiner.py  logic.py
src/migration_control_tower/domain/: __init__.py  brand_policy.py  enums.py  models.py  reason_codes.py
src/migration_control_tower/micc/: __init__.py  queues.py  simulation.py  stub.py
src/migration_control_tower/pipeline/: __init__.py  result.py  run.py
src/migration_control_tower/rules/: __init__.py  definitions.py  engine.py  evaluators.py
tests/: conftest.py  test_decision_combiner.py  test_domain_models.py  test_eligibility_agent.py  test_micc_stub.py  test_pipeline.py  test_rules_engine.py  test_synthetic_dataset.py  test_ui_helpers.py
