[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "migration-control-tower"
version = "0.1.0"
description = "Local-first MVP decisioning layer for 5G subscriber migration eligibility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "streamlit>=1.30,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
